    - Setting keyboard modifiers with xmodmap.
    - Fix multimonitor support on Linux. 
    - Display more version info. Parameters --version, --git, --changelog.
    - Don't show GUI dialog for --version, --help, etc, if started
      from terminal on linux and mac.
    - If no user in session config, display system username in pass form.

  [ Mike Gabriel ]
  * debian/control:
    + Build-depend on libssh-dev (>= 0.5.4-2).
    + Bump Standards: to 3.9.5. No changes needed.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Jan 2014 09:20:08 +0100

x2goclient (4.0.1.4-0x2go1) UNRELEASED; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.4):
    - Increase ssh_select timeout to 0.5 sec.
    - Set mod map from client to server on Mac, hide keyboard settings on Mac.
    - Fix mod map on Mac with kerberos.
    - Fix focus on pass form.   

  [ Orion Poplawski ]
  * New upstream version (4.0.1.4):
    - Fix password connection with libssh 0.6.0
    - Don't use ancient Debianism's for ssh options (ProtocolKeepAlives).
      (Fixes: #434).

  [ Martti Pitkanen ]
  * New upstream version (4.0.1.4):
    - Update Finnish translation file.

  [ Robert Parts ]
  * New upstream version (4.0.1.4):
    - Add new translation of X2Go Client to Estonian.

  [ Nicolai Hansen ]
  * New upstream version (4.0.1.4):
    - Update Danish translation file.

  [ Jos ]
  * New upstream version (4.0.1.4):
    - Add new translation of X2Go Client to Dutch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Jan 2014 09:17:39 +0100

x2goclient (4.0.1.3-0x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.3):
    - changed keyboard settings. Supported modes: auto, none and config with
      model/layout(variant)
    - Enables forwarding (delegation) of GSSAPI credentials to the server. 
    - Make GSSAPI delegation configurable.
    - Update Russian translation file.
    - Rewrite SSH Classes to support libssh fix.