@@ -13,6 +13,10 @@ x2goclient (4.0.2.0-0x2go1) UNRELEASED; urgency=low
     - Don't show GUI dialog for --version, --help, etc, if started
       from terminal on linux and mac.
     - If no user in session config, display system username in pass form.
+  
+  [ Josh Lukens ] 
+  * New upstream version (4.0.2.0):
+    - Switch to QNetworkAccessManager.
 
   [ Mike Gabriel ]
   * debian/control:
